force-app/main/default/objects/Project_Closeout__c/Project_Closeout__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus><description>Versioned project completion checklist, final reconciliation and independent closeout approval.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing>
<label>Project Closeout</label><nameField><displayFormat>PCO-{00000}</displayFormat><label>Project Closeout Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField><pluralLabel>Project Closeouts</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility>
</CustomObject>