force-app/main/default/objects/Project_Closeout__c/fields/All_Deliverables_Accepted__c.field-meta.xml
<CustomField><fullName>All_Deliverables_Accepted__c</fullName><defaultValue>false</defaultValue><label>All Deliverables Accepted</label><type>Checkbox</type></CustomField>