force-app/main/default/objects/Project_Closeout__c/fields/Allocations_Released__c.field-meta.xml
<CustomField><fullName>Allocations_Released__c</fullName><defaultValue>false</defaultValue><label>Allocations Released</label><type>Checkbox</type></CustomField>