force-app/main/default/objects/Project_Closeout__c/fields/Approver__c.field-meta.xml
<CustomField><fullName>Approver__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Approver</label><referenceTo>User</referenceTo><relationshipLabel>Approved Project Closeouts</relationshipLabel><relationshipName>Approved_Project_Closeouts</relationshipName><type>Lookup</type></CustomField>