force-app/main/default/objects/Project_Closeout__c/fields/Closeout_ID__c.field-meta.xml
<CustomField><fullName>Closeout_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Closeout ID</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>