force-app/main/default/objects/Project_Closeout__c/fields/Completion_Date__c.field-meta.xml
<CustomField><fullName>Completion_Date__c</fullName><label>Completion Date</label><type>Date</type></CustomField>