force-app/main/default/objects/Project_Closeout__c/fields/Correlation_ID__c.field-meta.xml
<CustomField><fullName>Correlation_ID__c</fullName><label>Correlation ID</label><length>80</length><type>Text</type></CustomField>