force-app/main/default/objects/Project_Closeout__c/fields/Customer_Acceptance_Note__c.field-meta.xml
<CustomField><fullName>Customer_Acceptance_Note__c</fullName><label>Customer Acceptance Note</label><length>32000</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>