force-app/main/default/objects/Project_Closeout__c/fields/Decision_Note__c.field-meta.xml
<CustomField><fullName>Decision_Note__c</fullName><label>Decision Note</label><length>32000</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>