force-app/main/default/objects/Project_Closeout__c/fields/Final_Actual_Hours__c.field-meta.xml
<CustomField><fullName>Final_Actual_Hours__c</fullName><label>Final Actual Hours</label><precision>16</precision><scale>2</scale><type>Number</type></CustomField>