force-app/main/default/objects/Project_Closeout__c/fields/Final_EAC__c.field-meta.xml
<CustomField><fullName>Final_EAC__c</fullName><label>Final Estimate at Completion</label><precision>18</precision><scale>2</scale><type>Currency</type></CustomField>