force-app/main/default/objects/Project_Closeout__c/fields/Lessons_Learned__c.field-meta.xml
<CustomField><fullName>Lessons_Learned__c</fullName><label>Lessons Learned</label><length>32000</length><visibleLines>6</visibleLines><type>LongTextArea</type></CustomField>