force-app/main/default/objects/Project_Closeout__c/fields/Open_Risk_Count__c.field-meta.xml
<CustomField><fullName>Open_Risk_Count__c</fullName><defaultValue>0</defaultValue><label>Open Risk Count</label><precision>8</precision><scale>0</scale><type>Number</type></CustomField>