force-app/main/default/objects/Project_Closeout__c/fields/Submitted_By__c.field-meta.xml
<CustomField><fullName>Submitted_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Submitted By</label><referenceTo>User</referenceTo><relationshipLabel>Submitted Project Closeouts</relationshipLabel><relationshipName>Submitted_Project_Closeouts</relationshipName><type>Lookup</type></CustomField>