force-app/main/default/objects/Project_Closeout__c/fields/Timesheets_Reconciled__c.field-meta.xml
<CustomField><fullName>Timesheets_Reconciled__c</fullName><defaultValue>false</defaultValue><label>Timesheets Reconciled</label><type>Checkbox</type></CustomField>