force-app/main/default/objects/Project_Closeout__c/listViews/Pending_Closeout.listView-meta.xml
<ListView><fullName>Pending_Closeout</fullName><columns>NAME</columns><columns>Closeout_ID__c</columns><columns>Engagement__c</columns><columns>State__c</columns><columns>Completion_Date__c</columns><columns>Open_Risk_Count__c</columns><columns>Submitted_At__c</columns><filterScope>Everything</filterScope><filters><field>State__c</field><operation>notEqual</operation><value>Approved</value></filters><label>Pending Closeout</label></ListView>